# practical

./: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md
docs/: .gitignore  conf.py  index.rst  installation.rst  usage.rst
practical/: __init__.py  arrays.py  git.py  log.py  memory.py  types.py  units.py  web.py
practical/tests/: __init__.py
tests/: __init__.py  test_arrays.py  test_memory.py  test_types.py  test_units.py
